# fast-api-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
back/: .env.dist  .env.test  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 1a6d72548d3a_initial.py  92d0d4a281f7_initial.py  da038a19ed5a_initial.py  ff37f402f83a_initial.py
back/src/template_app/: __init__.py  main.py
back/src/template_app/commands/: init_db.py
back/src/template_app/core/: config.py  exceptions.py  logging_config.py
back/src/template_app/core/database/: __init__.py  base.py  models.py
back/src/template_app/music/: __init__.py  models.py  router.py  schemas.py  service.py
back/tests/: conftest.py
back/tests/core/: __init__.py  test_db.py
back/tests/core/factories/: __init__.py  base.py
back/tests/core/utils/: db.py
back/tests/music/: __init__.py  factories.py  test_models.py  test_router.py
docker/: back.Dockerfile
