[project]
name = "template_app"
version = "0.1.dev"
description = "FastAPI template with domain-driven architecture"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "advanced-alchemy>=1.6.3",
    "alembic>=1.14.0",
    "alembic_postgresql_enum>=1.8.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "psycopg[pool]>=3.2.9",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    # binary psycopg in dev
    "psycopg[pool,binary]>=3.2.9",

    # test utils
    "faker>=37.6.0",
    "pytest-asyncio>=1.1.0",
    "pytest-socket>=0.7.0",  # prevent external http connections in tests
    "pytest>=8.4.0",

    # lint and code-quality
    "mypy>=1.17.1",
    "ruff>=0.8.0",
]

[project.scripts]
init-db = "template_app.commands.init_db:main"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "FAST", "UP", "RUF", "B"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"**/database/*.py" = ["E712"]
"alembic/**.py" = ["ALL"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
filterwarnings = [
    "error", # treat all warnings as errors
]
asyncio_mode = "auto"
addopts = "--disable-socket --allow-unix-socket --allow-hosts=127.0.0.1,localhost,::1"

[tool.mypy]
exclude = "(?x)(alembic/*)"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
